--- a/src/mibg3/Inloggningsruta.form
+++ b/src/mibg3/Inloggningsruta.form
@@ -137,6 +137,9 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Segoe UI" size="8" style="0"/>
             </Property>
+            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="33" green="33" red="ff" type="rgb"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="vad &#xe4;r det v&#xe4;rsta som kan h&#xe4;nda?"/>
           </Properties>
           <Events>
